--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "finnhub": "^1.2.19",
     "firebase": "^11.1.0",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
